# Steward

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TASKS.md  docker-compose.yml  push-docs.sh  setup-github.sh
backend/: Dockerfile.dev  pyproject.toml
backend/alembic/: env.py  migrations_test.py
backend/alembic/versions/: c8a5f25bc447_initial_schema.py
backend/app/: config.py  conftest.py  db.py  main.py
backend/app/api/: deps.py  environments.py  environments_test.py  health.py  health_test.py  scans.py  scans_test.py  settings.py  settings_test.py
backend/app/models/: __init__.py  environment.py  report.py  scan.py
backend/app/prompts/: system.md
backend/app/schemas/: __init__.py  environment.py  report.py  scan.py  settings.py
backend/app/services/: crypto.py  finding_enricher.py  finding_enricher_test.py  kubecost.py  kubecost_test.py  ollama_client.py  ollama_client_test.py  preprocessor.py  preprocessor_test.py  rag.py  rag_test.py  report_validator.py  report_validator_test.py
backend/app/workers/: scan_worker.py  scan_worker_test.py
backend/tests/fixtures/: digest_snapshot.json  kubecost_abandoned_workloads.json  kubecost_allocation_accumulated.json  kubecost_allocation_buckets.json  kubecost_allocation_large.json  kubecost_assets.json  kubecost_savings_cluster_sizing.json  kubecost_savings_request_sizing.json
docs/: ARCHITECTURE.md  AWS_KUBECOST_SETUP.md  CONFIGURATION.md  INSTALL.md  LIMITATIONS.md  OPERATIONS.md  SECURITY.md  TROUBLESHOOTING.md
docs/screenshots/: README.md
frontend/: Dockerfile.dev  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.mts  vitest.setup.ts
frontend/src/: test-utils.tsx
(+44 files in other folders)
