[project]
name = "steward-backend"
version = "0.1.0"
description = "Backend API for Steward — local-first FinOps for Kubernetes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "httpx>=0.27.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "ollama>=0.3.0",
    "structlog>=24.4.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# E501: long lines are handled by the formatter.
# B008: ``Depends(...)`` in default args is the canonical FastAPI idiom.
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app", "alembic"]
python_files = ["*_test.py", "test_*.py"]
markers = [
    "slow: integration tests using real ML models or external services",
]
addopts = "-m 'not slow'"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
